# xdas

./: .coverage  .gitignore  .readthedocs.yaml  README.md  medfilt.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yaml  api.yaml  code-coverage.yaml  tests.yaml
docs/: .readthedocs.yaml  api.md  cite.md  conf.py  contribute.md  data-structures.md  getting-started.md  index.md  index.rst  release-notes.md  xdas.md  xdas.rst
docs/_static/: switcher.json
docs/api/: atoms.md  atoms_signal.md  coordinates.md  fft.md  index.md  io.md  other.md  parallel.md  picking.md  processing.md  signal.md  synthetics.md  virtual.md  xdas.md
docs/api/_autosummary/: xdas.Coordinate.dtype.rst  xdas.Coordinate.equals.rst  xdas.Coordinate.isdense.rst  xdas.Coordinate.isinterp.rst  xdas.Coordinate.isscalar.rst  xdas.Coordinate.ndim.rst  xdas.Coordinate.rst  xdas.Coordinate.shape.rst  xdas.Coordinate.to_index.rst  xdas.Coordinate.values.rst  xdas.Coordinates.copy.rst  xdas.Coordinates.drop.rst  xdas.Coordinates.equals.rst  xdas.Coordinates.get_query.rst  xdas.Coordinates.isdim.rst  xdas.Coordinates.rst  xdas.Coordinates.to_dict.rst  xdas.Coordinates.to_index.rst  xdas.DataArray.copy.rst  xdas.DataArray.equals.rst  xdas.DataArray.from_netcdf.rst  xdas.DataArray.from_stream.rst  xdas.DataArray.from_xarray.rst  xdas.DataArray.get_axis_num.rst  xdas.DataArray.isel.rst  xdas.DataArray.load.rst  xdas.DataArray.plot.rst  xdas.DataArray.rename.rst  xdas.DataArray.rst  xdas.DataArray.sel.rst  xdas.DataArray.to_netcdf.rst  xdas.DataArray.to_stream.rst  xdas.DataArray.to_xarray.rst  xdas.DataCollection.from_netcdf.rst  xdas.DataCollection.ismapping.rst  xdas.DataCollection.issequence.rst  xdas.DataCollection.query.rst  xdas.DataCollection.rst  (+147 more)
docs/user-guide/: atoms.md  compose.md  convert-displacement.md  data-formats.md  data-structures.md  engine.md  faq.md  index.md  interpolated-coordinates.md  miniseed.md  online-computation.md  processing.md  streaming.md  virtual-datasets.md
tests/: conftest.py  temp_DIANE.ipynb  test_atoms.py  test_compose.py  test_coordinates.py  test_core.py  test_dask.py  test_dataarray.py  test_database.py  test_datacollection.py  test_encode.py  test_fft.py  test_filters.py  test_methods.py  test_numpy.py  test_parallel.py  test_picking.py  test_processing.py  test_routines.py  test_sampled_coordinate.py  test_signal.py  test_signaltools.py  test_trigger.py  test_ufuncs.py  test_utils.py  test_virtual.py  test_xarray.py  test_xdas.py
tests/codes/: test_medfilt.py
tests/coordinates/: test_coordinates.py  test_default.py  test_dense.py  test_generic.py  test_interp.py  test_sampled.py  test_scalar.py
tests/dask/: test_core.py  test_serial.py
tests/io/: test_asn.py  test_dask.py  test_febus.py  test_generic.py  test_miniseed.py  test_prodml.py  test_utils.py  test_xdas_io.py
xdas/: __init__.py  atoms.py  compose.py  config.py  coordinates.py  core.py  dask.py  database.py  datacollection.py  fft.py  filters.py  monitor.py  numpy.py  parallel.py  picking.py  processing.py  signal.py  signaltools.py  spectral.py  synthetics.py  trigger.py  ufuncs.py  virtual.py  xarray.py
xdas/atoms/: __init__.py  core.py  ml.py  signal.py
xdas/coordinates/: __init__.py  core.py  default.py  dense.py  interp.py  sampled.py  scalar.py
xdas/core/: __init__.py  coordinates.py  dataarray.py  database.py  datacollection.py  methods.py  numpy.py  routines.py
xdas/dask/: __init__.py  core.py  serial.py
xdas/io/: __init__.py  apsensing.py  asn.py  core.py  dask.py  engine.py  febus.py  miniseed.py  netcdf.py  optasense.py  prodml.py  silixa.py  sintela.py  tdms.py  terra15.py  utils.py  xdas.py
xdas/processing/: __init__.py  core.py  monitor.py
xdas/scipy/: __init__.py  fft.py  signal.py
(+26 files in other folders)
