[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xdas"
version = "0.2.3"
requires-python = ">= 3.10"
authors = [
    { name = "Alister Trabattoni", email = "alister.trabattoni@gmail.com" },
]
dependencies = [
    "dask<2025.4.0",
    "h5netcdf",
    "h5py",
    "hdf5plugin",
    "msgpack",
    "numba",
    "numpy",
    "obspy",
    "pandas",
    "plotly",
    "scipy",
    "tqdm",
    "watchdog",
    "xarray",
    "xinterp",
    "pyzmq",
]

[project.optional-dependencies]
dev = ["black", "build", "isort", "twine"]
docs = [
    "ipykernel",
    "matplotlib",
    "myst-nb",
    "pydata-sphinx-theme",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinx",
]
tests = ["pytest", "pytest-cov", "seisbench", "torch"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ["--doctest-modules", "--import-mode=importlib"]
doctest_optionflags = "NORMALIZE_WHITESPACE"
