[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xdas"
version = "0.2.6"
requires-python = ">= 3.10"
authors = [
    { name = "Alister Trabattoni", email = "alister.trabattoni@gmail.com" },
]
dependencies = [
    "dask<2025.4.0",
    "h5netcdf",
    "h5py",
    "hdf5plugin",
    "loky",
    "msgpack",
    "numba",
    "numpy",
    "obspy",
    "pandas",
    "plotly",
    "setuptools<82.0.0",
    "scipy",
    "tqdm",
    "watchdog",
    "xarray",
    "xinterp",
    "pyzmq",
]

[project.optional-dependencies]
dev = ["build", "ruff", "twine"]
docs = [
    "ipykernel",
    "matplotlib",
    "myst-nb",
    "pydata-sphinx-theme",
    "sphinx-design",
    "sphinx-copybutton",
    "sphinx",
]
tests = [
    "dascore",
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "psutil",
    "seisbench",
    "torch",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--import-mode=importlib",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
markers = ["slow: marks tests as slow (skip with --skip-slow)"]

[tool.coverage.run]
source = ["xdas"]
branch = true
omit = ["xdas/io/tdms.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = ["raise NotImplementedError"]
